# Autobar

./: .gitignore  Cargo.toml  README.md  flaskmain.py  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: main.rs
static/: main.css
templates/: base.html  beverages.html
