[package]
name = "Autobar"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
derive_more = "0.99.18"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serialport = "4.3.0"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
